@@ -1,12 +1,11 @@
 package com.example.ProjectJojo.controller;
 
-// import com.example.ProjectJojo.dto.MenuResponseDTO;
 import com.example.ProjectJojo.entity.Menu;
 import com.example.ProjectJojo.service.MenuService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.web.bind.annotation.*;
-
 import java.util.List;
+import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/menu")
@@ -16,9 +15,10 @@ public class MenuController {
     private MenuService menuService;
 
     @GetMapping
-    public List<Menu> getMenus() { 
-        List<Menu> menus = menuService.getAllMenus();   
-        return menus.stream().map(this::convertToDTO).toList();
+    public List<Menu> getMenus() {
+        List<Menu> menus = fetchMenusFromDatabase();
+        return convertToDTOList(menus);
+        
     }
 
     private Menu convertToDTO(Menu menu) {
@@ -26,12 +26,24 @@ public class MenuController {
         dto.setId(menu.getId());
         dto.setName(menu.getName());
         dto.setDescription(menu.getDescription());
-        dto.setSubMenus(menu.getSubMenus()); 
-        // Assuming Menu has a `getSubMenus()` method for hierarchical structure
-        // if (menu.getSubMenus() != null) {
-        //     dto.setSubMenus(menu.getSubMenus().stream().map(this::convertToDTO).toList());
-        // }
+        if (menu.getSubmenu() != null) {
+            System.out.println(dto.getSubMenus());
+            dto.setSubMenus(menu.getSubmenu().stream()
+                    .map(this::convertToDTO)
+                    .collect(Collectors.toList()));
+        }
         return dto;
+    }
+
+    public List<Menu> convertToDTOList(List<Menu> menus) {
+        return menus.stream()
+                .map(this::convertToDTO)
+                .collect(Collectors.toList());
+    }
+
+    private List<Menu> fetchMenusFromDatabase() {
+        // Mock or actual database call
+        return List.of(); // Replace with actual logic
     }
 
     @PostMapping
@@ -39,14 +51,14 @@ public class MenuController {
         return menuService.createMenu(menu);
     }
 
-    // @PutMapping("/{id}")
-    // public Menu updateMenu(@PathVariable Long id, @RequestBody Menu menu) {
-    // return menuService.updateMenu(id, menu);
-    // }
+    @PutMapping("/{id}")
+    public Menu updateMenu(@PathVariable Long id, @RequestBody Menu menu) {
+        return menuService.updateMenu(id, menu);
+    }
 
-    // @DeleteMapping("/{id}")
-    // public String deleteMenu(@PathVariable Long id) {
-    // menuService.deleteMenu(id);
-    // return "Menu with id " + id + " has been deleted.";
-    // }
+    @DeleteMapping("/{id}")
+    public String deleteMenu(@PathVariable Long id) {
+        menuService.deleteMenu(id);
+        return "Menu with id " + id + " has been deleted.";
+    }
 }
